--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -21,7 +21,8 @@ on:
 
 env:
   #REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_URL: https://github.com/ZirrorDmage/immortalwrt-mt798x
+  #REPO_URL: https://github.com/ZirrorDmage/immortalwrt-mt798x
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   #REPO_BRANCH: master
   REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
