--- a/.config
+++ b/.config
@@ -65,6 +65,12 @@ CONFIG_TARGET_mediatek_mt7981=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cetron_ct3003 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-clt-r30b1 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_mt7981-clt-r30b1-112M is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e-stock is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e-firmware2 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e-pro-stock is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e-pro-firmware2 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ruijie_rg-x30e-pro is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-wr30u-stock is not set
 CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-wr30u-112m=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-ax3000t-stock is not set
@@ -74,15 +80,23 @@ CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-wr30u-112m=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_glinet_gl-xe3000 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_glinet_gl-mt2500 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_jcg_q30 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_ikuai_q3000 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_livinet_zr-3020 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_a10 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m-emmc is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_xr30 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_xr30-emmc is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_h3c_nx30pro is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_honor_fur-602 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_konka_komi-a31 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_imou_lc-hx3001 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_nokia_ea0326gmp is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_newland_nl-wr8103 is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_newland_nl-wr9103 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_nradio_wt9103 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_nradio_wt9103_512m is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_routerich_ax3000 is not set
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="mediatek"
