--- a/.config
+++ b/.config
@@ -72,6 +72,8 @@ CONFIG_TARGET_mediatek_mt7981=y
 CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-wr30u-112m=y
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-ax3000t-stock is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-ax3000t is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-ax3000t-an8855-stock is not set
+# CONFIG_TARGET_mediatek_mt7981_DEVICE_xiaomi_mi-router-ax3000t-an8855 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_glinet_gl-mt3000 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_glinet_gl-x3000 is not set
 # CONFIG_TARGET_mediatek_mt7981_DEVICE_glinet_gl-xe3000 is not set
@@ -3813,6 +3815,7 @@ CONFIG_PACKAGE_lua-cjson=y
 # CONFIG_PACKAGE_lua-neturl is not set
 # CONFIG_PACKAGE_lua-openssl is not set
 # CONFIG_PACKAGE_lua-penlight is not set
+# CONFIG_PACKAGE_lua-periphery is not set
 # CONFIG_PACKAGE_lua-rings is not set
 # CONFIG_PACKAGE_lua-rs232 is not set
 # CONFIG_PACKAGE_lua-sha2 is not set
@@ -6259,7 +6262,7 @@ CONFIG_first_card_name="MT7981"
 # CONFIG_PACKAGE_mktorrent is not set
 # CONFIG_PACKAGE_opentracker is not set
 # CONFIG_PACKAGE_opentracker6 is not set
-# CONFIG_PACKAGE_qBittorrent-Enhanced-Edition is not set
+# CONFIG_PACKAGE_qbittorrent-enhanced-edition is not set
 # CONFIG_PACKAGE_rtorrent is not set
 # CONFIG_PACKAGE_rtorrent-rpc is not set
 # CONFIG_PACKAGE_simple-torrent is not set
@@ -6287,7 +6290,6 @@ CONFIG_first_card_name="MT7981"
 # CONFIG_PACKAGE_apfree-wifidog is not set
 # CONFIG_PACKAGE_coova-chilli is not set
 # CONFIG_PACKAGE_mesh11sd is not set
-# CONFIG_PACKAGE_nodogsplash is not set
 # CONFIG_PACKAGE_opennds is not set
 # CONFIG_PACKAGE_wifidog is not set
 # CONFIG_PACKAGE_wifidog-tls is not set
@@ -6922,6 +6924,7 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_comgt is not set
 # CONFIG_PACKAGE_comgt-directip is not set
 # CONFIG_PACKAGE_comgt-ncm is not set
+# CONFIG_PACKAGE_sendat is not set
 # CONFIG_PACKAGE_umbim is not set
 # CONFIG_PACKAGE_uqmi is not set
 # end of WWAN
@@ -7954,6 +7957,7 @@ CONFIG_PACKAGE_shellsync=y
 # CONFIG_PACKAGE_smartd-mail is not set
 # CONFIG_PACKAGE_smartmontools is not set
 # CONFIG_PACKAGE_smartmontools-drivedb is not set
+# CONFIG_PACKAGE_sms-tool is not set
 # CONFIG_PACKAGE_smstools3 is not set
 # CONFIG_PACKAGE_sockread is not set
 # CONFIG_PACKAGE_spi-tools is not set
